Gabel-Nord: slum-Gebiet einbauen
Gabel - Nordtor
- Bettlerviertel nun im Norden
- Der Söldnertrupp "Jadefalken" hat sich niedergelassen
- Die Stallungen liegen nun in "Gabel - Südost"

Gabel - Nordwest
- Kleinere Placeablefehler behoben

Gabel - Südost
- Die Stallungen stehen nun hier

Gabel - West
- Ein Mauerstück im Norden wurde entfernt(Unsinniges Mauerstück)
- Baustelle entfernt

Gabel - Scheune
- Gebiet entfernt

--- a/mod/area/gabel_zentrum.gic.yml
+++ b/mod/area/gabel_zentrum.gic.yml
@@ -64,6 +64,8 @@ hash: !ruby/object:NWN::Gff::Struct
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 8}
     Encounter List: !ruby/object:NWN::Gff::Element 
       label: Encounter List
       type: :list
@@ -501,11 +503,13 @@ hash: !ruby/object:NWN::Gff::Struct
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
-      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: "NPCs, die in diesem Trigger gespawned werden, werden Nachts in den Limbo geschickt (und dann wieder rausgeholt wenns hell wird)."}}, struct_id: 1}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
     WaypointList: !ruby/object:NWN::Gff::Element 
       label: WaypointList
       type: :list
       value: 
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
