--- a/mod/area/gabel_berthas.git.yml
+++ b/mod/area/gabel_berthas.git.yml
@@ -47,7 +47,7 @@ hash: !ruby/object:NWN::Gff::Struct
           BodyPart_Torso: !ruby/object:NWN::Gff::Element {label: BodyPart_Torso, type: :byte, value: 1}
           CRAdjust: !ruby/object:NWN::Gff::Element {label: CRAdjust, type: :int, value: 0}
           Cha: !ruby/object:NWN::Gff::Element {label: Cha, type: :byte, value: 10}
-          ChallengeRating: !ruby/object:NWN::Gff::Element {label: ChallengeRating, type: :float, value: 0.333333343267441}
+          ChallengeRating: !ruby/object:NWN::Gff::Element {label: ChallengeRating, type: :float, value: 0.3333}
           ClassList: !ruby/object:NWN::Gff::Element 
             label: ClassList
             type: :list
@@ -257,11 +257,11 @@ hash: !ruby/object:NWN::Gff::Struct
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.313686579465866}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 14.1438703536987}
-          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -0.94952654838562}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 17.2542762756348}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.00216066837310791}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: -0.3137}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 14.1439}
+          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: -0.9495}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 17.2543}
+          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.0022}
           fortbonus: !ruby/object:NWN::Gff::Element {label: fortbonus, type: :short, value: 0}
           refbonus: !ruby/object:NWN::Gff::Element {label: refbonus, type: :short, value: 0}
           willbonus: !ruby/object:NWN::Gff::Element {label: willbonus, type: :short, value: 0}
@@ -275,7 +275,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.14158701896667}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
           CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 15}
@@ -295,7 +295,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
           KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
           KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
-          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: gabel_s_2_berthas}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: gabel_sued_to_bertha}
           LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
           LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
           LocName: !ruby/object:NWN::Gff::Element 
@@ -335,7 +335,7 @@ hash: !ruby/object:NWN::Gff::Struct
           TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
           X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 5.0}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 12.8699998855591}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 12.87}
           Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0}
         struct_id: 8
     Encounter List: !ruby/object:NWN::Gff::Element 
@@ -357,7 +357,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 4}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 264}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.570796251297}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 1.5708}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -420,8 +420,8 @@ hash: !ruby/object:NWN::Gff::Struct
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
           Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 1}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
-          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 10.4700002670288}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.7700004577637}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 10.47}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.77}
           Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0}
         struct_id: 9
       - !ruby/object:NWN::Gff::Struct 
@@ -429,7 +429,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 4}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 264}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.570796251297}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -1.5708}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -492,16 +492,16 @@ hash: !ruby/object:NWN::Gff::Struct
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
           Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 1}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
-          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 5.84089136123657}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 18.2874965667725}
-          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: -5.7220458984375e-06}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 5.8409}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 18.2875}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: -0.0}
         struct_id: 9
       - !ruby/object:NWN::Gff::Struct 
         hash: 
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 264}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.785398185253143}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: 0.7854}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -564,8 +564,8 @@ hash: !ruby/object:NWN::Gff::Struct
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
           Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 1}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
-          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 18.0900001525879}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 18.2299995422363}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 18.09}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 18.23}
           Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0}
         struct_id: 9
       - !ruby/object:NWN::Gff::Struct 
@@ -573,7 +573,7 @@ hash: !ruby/object:NWN::Gff::Struct
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 351}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.14159226417542}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -635,16 +635,16 @@ hash: !ruby/object:NWN::Gff::Struct
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
           Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 0}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
-          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 11.1199998855591}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.3299999237061}
-          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.649999976158142}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 11.12}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.33}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.65}
         struct_id: 9
       - !ruby/object:NWN::Gff::Struct 
         hash: 
           AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
           Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 107}
           AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
-          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.14159226417542}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
           BodyBag: !ruby/object:NWN::Gff::Element {label: BodyBag, type: :byte, value: 0}
           CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
           Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
@@ -705,9 +705,9 @@ hash: !ruby/object:NWN::Gff::Struct
           Type: !ruby/object:NWN::Gff::Element {label: Type, type: :byte, value: 0}
           Useable: !ruby/object:NWN::Gff::Element {label: Useable, type: :byte, value: 0}
           Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
-          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 17.3972587585449}
-          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.6565256118774}
-          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.00216066837310791}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 17.3973}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 11.6565}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0022}
         struct_id: 9
     SoundList: !ruby/object:NWN::Gff::Element 
       label: SoundList
@@ -780,10 +780,10 @@ hash: !ruby/object:NWN::Gff::Struct
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: NW_SHOP}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_wp_shop}
           XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.0}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 17.1135330200195}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 17.1135}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 1.0}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 13.533203125}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.00216066837310791}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 13.5332}
+          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.0022}
         struct_id: 5
       - !ruby/object:NWN::Gff::Struct 
         hash: 
@@ -814,11 +814,11 @@ hash: !ruby/object:NWN::Gff::Struct
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: NW_STOP}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_wp_stop}
-          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.707106590270996}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 11.2848901748657}
-          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.707106947898865}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 14.682225227356}
-          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: -1.9073486328125e-06}
+          XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.7071}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 11.2849}
+          YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 0.7071}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 14.6822}
+          ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: -0.0}
         struct_id: 5
       - !ruby/object:NWN::Gff::Struct 
         hash: 
@@ -850,9 +850,9 @@ hash: !ruby/object:NWN::Gff::Struct
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: area_marker}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: area_marker}
           XOrientation: !ruby/object:NWN::Gff::Element {label: XOrientation, type: :float, value: 0.0}
-          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 8.71510982513428}
+          XPosition: !ruby/object:NWN::Gff::Element {label: XPosition, type: :float, value: 8.7151}
           YOrientation: !ruby/object:NWN::Gff::Element {label: YOrientation, type: :float, value: 1.0}
-          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 15.7711124420166}
+          YPosition: !ruby/object:NWN::Gff::Element {label: YPosition, type: :float, value: 15.7711}
           ZPosition: !ruby/object:NWN::Gff::Element {label: ZPosition, type: :float, value: 0.0}
         struct_id: 5
   struct_id: 4294967295
