Gabel-Kanalisation: Licht entfernen, Gabel-Nordstern: Fluchtweg Kanalisation
Kanalisation
- Lichtquellen entfernt, nehmt eine Fackel mit!

Nordstern
- One-way Geheimgang in die Kanalisation

--- a/mod/area/gabel_nordstern.gic.yml
+++ b/mod/area/gabel_nordstern.gic.yml
@@ -158,8 +158,8 @@ hash: !ruby/object:NWN::Gff::Struct
     TriggerList: !ruby/object:NWN::Gff::Element 
       label: TriggerList
       type: :list
-      value: []
-
+      value: 
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 1}
     WaypointList: !ruby/object:NWN::Gff::Element 
       label: WaypointList
       type: :list
