--- a/mod/area/gabkanno.gic.yml
+++ b/mod/area/gabkanno.gic.yml
@@ -105,6 +105,7 @@ hash: !ruby/object:NWN::Gff::Struct
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 9}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 9}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 9}
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 9}
     SoundList: !ruby/object:NWN::Gff::Element 
       label: SoundList
       type: :list
@@ -190,6 +191,7 @@ hash: !ruby/object:NWN::Gff::Struct
       label: WaypointList
       type: :list
       value: 
+      - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
       - !ruby/object:NWN::Gff::Struct {hash: {Comment: !ruby/object:NWN::Gff::Element {label: Comment, type: :cexostr, value: ""}}, struct_id: 5}
