Gabel-Stadtverwaltung: add sit_nearest=2 to all NPCs near chairs (fixes 229)

--- a/mod/area/gabel_gov.git.yml
+++ b/mod/area/gabel_gov.git.yml
@@ -1085,6 +1085,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_bleibtreu}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -1325,6 +1335,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_haberkorn}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -1806,6 +1826,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_frommholz}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -2046,6 +2076,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_rauchfuss}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -2526,6 +2566,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_wolfsfaeng}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -2765,6 +2815,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_stiefelein}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -3006,6 +3066,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_huettenrau}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -3729,6 +3799,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_eckelbaum}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -3969,6 +4049,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_reigenfueh}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -4449,6 +4539,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_lilienthal}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
@@ -4689,6 +4789,16 @@ hash: !ruby/object:NWN::Gff::Struct
             value: []
 
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: gabel_petterlein}
+          VarTable: !ruby/object:NWN::Gff::Element 
+            label: VarTable
+            type: :list
+            value: 
+            - !ruby/object:NWN::Gff::Struct 
+              hash: 
+                Name: !ruby/object:NWN::Gff::Element {label: Name, type: :cexostr, value: sit_nearest}
+                Type: !ruby/object:NWN::Gff::Element {label: Type, type: :dword, value: 1}
+                Value: !ruby/object:NWN::Gff::Element {label: Value, type: :int, value: 2}
+              struct_id: 0
           WalkRate: !ruby/object:NWN::Gff::Element {label: WalkRate, type: :int, value: 7}
           Wings: !ruby/object:NWN::Gff::Element {label: Wings, type: :byte, value: 0}
           Wis: !ruby/object:NWN::Gff::Element {label: Wis, type: :byte, value: 10}
