--- a/mod/area/gabel_gov.git.yml
+++ b/mod/area/gabel_gov.git.yml
@@ -5669,6 +5669,143 @@ hash: !ruby/object:NWN::Gff::Struct
           Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 40.0}
           Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 0.0}
         struct_id: 8
+      - !ruby/object:NWN::Gff::Struct
+        hash:
+          AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
+          Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
+          AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
+          CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
+          Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
+          CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 15}
+          Description: !ruby/object:NWN::Gff::Element
+            label: Description
+            str_ref: 9077
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages: {}
+
+          DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 15}
+          Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
+          Fort: !ruby/object:NWN::Gff::Element {label: Fort, type: :byte, value: 16}
+          GenericType: !ruby/object:NWN::Gff::Element {label: GenericType, type: :byte, value: 244}
+          HP: !ruby/object:NWN::Gff::Element {label: HP, type: :short, value: 15}
+          Hardness: !ruby/object:NWN::Gff::Element {label: Hardness, type: :byte, value: 5}
+          Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
+          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
+          KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: gabel_gov_2_gabel_gov_og_1}
+          LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
+          LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
+          LocName: !ruby/object:NWN::Gff::Element
+            label: LocName
+            str_ref: 14445
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages:
+                0: Gothic Door 21s1
+                4: Fancy Door
+          Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
+          Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
+          OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
+          OnClosed: !ruby/object:NWN::Gff::Element {label: OnClosed, type: :resref, value: door_closed}
+          OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: door_damaged}
+          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: door_death}
+          OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
+          OnFailToOpen: !ruby/object:NWN::Gff::Element {label: OnFailToOpen, type: :resref, value: door_failtoopen}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
+          OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: door_lockunlock}
+          OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
+          OnOpen: !ruby/object:NWN::Gff::Element {label: OnOpen, type: :resref, value: door_open}
+          OnSpellCastAt: !ruby/object:NWN::Gff::Element {label: OnSpellCastAt, type: :resref, value: ""}
+          OnTrapTriggered: !ruby/object:NWN::Gff::Element {label: OnTrapTriggered, type: :resref, value: ""}
+          OnUnlock: !ruby/object:NWN::Gff::Element {label: OnUnlock, type: :resref, value: door_lockunlock}
+          OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: ""}
+          OpenLockDC: !ruby/object:NWN::Gff::Element {label: OpenLockDC, type: :byte, value: 18}
+          Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
+          PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 558}
+          Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_gov_2_gabel_gov_og_1}
+          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ctp_door_21s1}
+          TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
+          TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
+          TrapDisarmable: !ruby/object:NWN::Gff::Element {label: TrapDisarmable, type: :byte, value: 1}
+          TrapFlag: !ruby/object:NWN::Gff::Element {label: TrapFlag, type: :byte, value: 0}
+          TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
+          TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
+          Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 65.0}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 5.0}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 1.4}
+        struct_id: 8
+      - !ruby/object:NWN::Gff::Struct
+        hash:
+          AnimationState: !ruby/object:NWN::Gff::Element {label: AnimationState, type: :byte, value: 0}
+          Appearance: !ruby/object:NWN::Gff::Element {label: Appearance, type: :dword, value: 0}
+          AutoRemoveKey: !ruby/object:NWN::Gff::Element {label: AutoRemoveKey, type: :byte, value: 0}
+          Bearing: !ruby/object:NWN::Gff::Element {label: Bearing, type: :float, value: -3.1416}
+          CloseLockDC: !ruby/object:NWN::Gff::Element {label: CloseLockDC, type: :byte, value: 0}
+          Conversation: !ruby/object:NWN::Gff::Element {label: Conversation, type: :resref, value: ""}
+          CurrentHP: !ruby/object:NWN::Gff::Element {label: CurrentHP, type: :short, value: 15}
+          Description: !ruby/object:NWN::Gff::Element
+            label: Description
+            str_ref: 9077
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages: {}
+
+          DisarmDC: !ruby/object:NWN::Gff::Element {label: DisarmDC, type: :byte, value: 15}
+          Faction: !ruby/object:NWN::Gff::Element {label: Faction, type: :dword, value: 1}
+          Fort: !ruby/object:NWN::Gff::Element {label: Fort, type: :byte, value: 16}
+          GenericType: !ruby/object:NWN::Gff::Element {label: GenericType, type: :byte, value: 244}
+          HP: !ruby/object:NWN::Gff::Element {label: HP, type: :short, value: 15}
+          Hardness: !ruby/object:NWN::Gff::Element {label: Hardness, type: :byte, value: 5}
+          Interruptable: !ruby/object:NWN::Gff::Element {label: Interruptable, type: :byte, value: 1}
+          KeyName: !ruby/object:NWN::Gff::Element {label: KeyName, type: :cexostr, value: ""}
+          KeyRequired: !ruby/object:NWN::Gff::Element {label: KeyRequired, type: :byte, value: 0}
+          LinkedTo: !ruby/object:NWN::Gff::Element {label: LinkedTo, type: :cexostr, value: gabel_gov_2_gabel_gov_og_2}
+          LinkedToFlags: !ruby/object:NWN::Gff::Element {label: LinkedToFlags, type: :byte, value: 1}
+          LoadScreenID: !ruby/object:NWN::Gff::Element {label: LoadScreenID, type: :word, value: 0}
+          LocName: !ruby/object:NWN::Gff::Element
+            label: LocName
+            str_ref: 14445
+            type: :cexolocstr
+            value: !ruby/object:NWN::Gff::CExoLocString
+              languages:
+                0: Gothic Door 21s1
+          Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
+          Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
+          OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
+          OnClosed: !ruby/object:NWN::Gff::Element {label: OnClosed, type: :resref, value: door_closed}
+          OnDamaged: !ruby/object:NWN::Gff::Element {label: OnDamaged, type: :resref, value: door_damaged}
+          OnDeath: !ruby/object:NWN::Gff::Element {label: OnDeath, type: :resref, value: door_death}
+          OnDisarm: !ruby/object:NWN::Gff::Element {label: OnDisarm, type: :resref, value: ""}
+          OnFailToOpen: !ruby/object:NWN::Gff::Element {label: OnFailToOpen, type: :resref, value: door_failtoopen}
+          OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
+          OnLock: !ruby/object:NWN::Gff::Element {label: OnLock, type: :resref, value: door_lockunlock}
+          OnMeleeAttacked: !ruby/object:NWN::Gff::Element {label: OnMeleeAttacked, type: :resref, value: ""}
+          OnOpen: !ruby/object:NWN::Gff::Element {label: OnOpen, type: :resref, value: door_open}
+          OnSpellCastAt: !ruby/object:NWN::Gff::Element {label: OnSpellCastAt, type: :resref, value: ""}
+          OnTrapTriggered: !ruby/object:NWN::Gff::Element {label: OnTrapTriggered, type: :resref, value: ""}
+          OnUnlock: !ruby/object:NWN::Gff::Element {label: OnUnlock, type: :resref, value: door_lockunlock}
+          OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: ""}
+          OpenLockDC: !ruby/object:NWN::Gff::Element {label: OpenLockDC, type: :byte, value: 18}
+          Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
+          PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 558}
+          Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: gabel_gov_2_gabel_gov_og_2}
+          TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: ctp_door_21s1}
+          TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
+          TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
+          TrapDisarmable: !ruby/object:NWN::Gff::Element {label: TrapDisarmable, type: :byte, value: 1}
+          TrapFlag: !ruby/object:NWN::Gff::Element {label: TrapFlag, type: :byte, value: 0}
+          TrapOneShot: !ruby/object:NWN::Gff::Element {label: TrapOneShot, type: :byte, value: 1}
+          TrapType: !ruby/object:NWN::Gff::Element {label: TrapType, type: :byte, value: 0}
+          Will: !ruby/object:NWN::Gff::Element {label: Will, type: :byte, value: 0}
+          X: !ruby/object:NWN::Gff::Element {label: X, type: :float, value: 5.0}
+          Y: !ruby/object:NWN::Gff::Element {label: Y, type: :float, value: 25.0}
+          Z: !ruby/object:NWN::Gff::Element {label: Z, type: :float, value: 1.4}
+        struct_id: 8
     Encounter List: !ruby/object:NWN::Gff::Element 
       label: Encounter List
       type: :list
