Gabel-NW: fix map note. again. (fixes 232)

--- a/mod/area/gabel_nw.git.yml
+++ b/mod/area/gabel_nw.git.yml
@@ -16081,7 +16081,7 @@ hash: !ruby/object:NWN::Gff::Struct
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: 
-                0: Proctos' Schneiderei
+                0: "Proctos' Schneiderei"
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: ""}
@@ -17555,13 +17555,14 @@ hash: !ruby/object:NWN::Gff::Struct
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
               languages: 
-                0: Proctos' Schneiderei
+                0: "Proctos' Schneiderei"
           MapNote: !ruby/object:NWN::Gff::Element 
             label: MapNote
             str_ref: 14815
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: {}
+              languages: 
+                0: "Proctos' Schneiderei"
 
           MapNoteEnabled: !ruby/object:NWN::Gff::Element {label: MapNoteEnabled, type: :byte, value: 1}
           Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: NW_MAPNOTE001}
