areas: fix scripts

--- a/mod/area/gabel_stallung.are.yml
+++ b/mod/area/gabel_stallung.are.yml
@@ -37,7 +37,7 @@ hash: !ruby/object:NWN::Gff::Struct
           4: An der Gabel - Stallung
           5: An der Gabel - Stallung
     NoRest: !ruby/object:NWN::Gff::Element {label: NoRest, type: :byte, value: 0}
-    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: area_onenter}
+    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: sr_enter_inside}
     OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: _area_leave}
     OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: _area_hb}
     OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: _area_udef}
