--- a/mod/area/talona_tempel.are.yml
+++ b/mod/area/talona_tempel.are.yml
@@ -36,10 +36,10 @@ hash: !ruby/object:NWN::Gff::Struct
         languages: 
           4: Dunkler Tempel
     NoRest: !ruby/object:NWN::Gff::Element {label: NoRest, type: :byte, value: 0}
-    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: ""}
-    OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: ""}
-    OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: ""}
-    OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: ""}
+    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: sr_enter_inside}
+    OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: _area_leave}
+    OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: _area_hb}
+    OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: _area_udef}
     PlayerVsPlayer: !ruby/object:NWN::Gff::Element {label: PlayerVsPlayer, type: :byte, value: 3}
     ResRef: !ruby/object:NWN::Gff::Element {label: ResRef, type: :resref, value: talona_tempel}
     ShadowOpacity: !ruby/object:NWN::Gff::Element {label: ShadowOpacity, type: :byte, value: 60}
