--- a/mod/area/area054.are.yml
+++ b/mod/area/area054.are.yml
@@ -37,7 +37,7 @@ hash: !ruby/object:NWN::Gff::Struct
           4: "Wildnis - M\xFChlengrundhaus"
           5: "Wildnis - M\xFChlengrundhaus"
     NoRest: !ruby/object:NWN::Gff::Element {label: NoRest, type: :byte, value: 0}
-    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: area_left}
+    OnEnter: !ruby/object:NWN::Gff::Element {label: OnEnter, type: :resref, value: sr_enter_inside}
     OnExit: !ruby/object:NWN::Gff::Element {label: OnExit, type: :resref, value: _area_leave}
     OnHeartbeat: !ruby/object:NWN::Gff::Element {label: OnHeartbeat, type: :resref, value: _area_hb}
     OnUserDefined: !ruby/object:NWN::Gff::Element {label: OnUserDefined, type: :resref, value: _area_udef}
