--- a/mod/area/area012.git.yml
+++ b/mod/area/area012.git.yml
@@ -653,9 +653,7 @@ hash: !ruby/object:NWN::Gff::Struct
             str_ref: 5349
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                4: pension_2_gabel_z_1
-                5: pension_2_gabel_z_1
+              languages: {}
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: door_click}
@@ -790,9 +788,7 @@ hash: !ruby/object:NWN::Gff::Struct
             str_ref: 5349
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                4: pension_2_gabel_z_2
-                5: pension_2_gabel_z_2
+              languages: {}
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: door_click}
