--- a/mod/area/area013.git.yml
+++ b/mod/area/area013.git.yml
@@ -264,9 +264,7 @@ hash: !ruby/object:NWN::Gff::Struct
             str_ref: 5349
             type: :cexolocstr
             value: !ruby/object:NWN::Gff::CExoLocString 
-              languages: 
-                4: PensionOG_2_EG
-                5: PensionOG_2_EG
+              languages: {}
           Lockable: !ruby/object:NWN::Gff::Element {label: Lockable, type: :byte, value: 0}
           Locked: !ruby/object:NWN::Gff::Element {label: Locked, type: :byte, value: 0}
           OnClick: !ruby/object:NWN::Gff::Element {label: OnClick, type: :resref, value: door_click}
