--- a/mod/area/astralebene.git.yml
+++ b/mod/area/astralebene.git.yml
@@ -82,7 +82,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
           PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
           Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: DesertExit}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: astralebene_2_nexus}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: x0_door_ttr_31}
           TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
           TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
