OOC: fix transition, add event script

--- a/mod/area/area043.git.yml
+++ b/mod/area/area043.git.yml
@@ -2498,7 +2498,7 @@ hash: !ruby/object:NWN::Gff::Struct
           Plot: !ruby/object:NWN::Gff::Element {label: Plot, type: :byte, value: 0}
           PortraitId: !ruby/object:NWN::Gff::Element {label: PortraitId, type: :word, value: 0}
           Ref: !ruby/object:NWN::Gff::Element {label: Ref, type: :byte, value: 0}
-          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: OOCAusgang}
+          Tag: !ruby/object:NWN::Gff::Element {label: Tag, type: :cexostr, value: ooc_2_nexus}
           TemplateResRef: !ruby/object:NWN::Gff::Element {label: TemplateResRef, type: :resref, value: nw_door_ttr_25}
           TrapDetectDC: !ruby/object:NWN::Gff::Element {label: TrapDetectDC, type: :byte, value: 0}
           TrapDetectable: !ruby/object:NWN::Gff::Element {label: TrapDetectable, type: :byte, value: 1}
